feat: melhoria no método buscarRua
